Fix alignment and size issues

--- a/frontend/src/usecases/app/App.scss
+++ b/frontend/src/usecases/app/App.scss
@@ -15,20 +15,18 @@ body {
 }
 
 .App {
-  .side-menu-container {
-    background-color: $grey;
-    width: $side-menu-container-width;
-  }
   .selection-container {
     background-color: $grey;
-    padding-top: $sm-space;
-    padding-right: $sm-space;
-    padding-bottom: $sm-space;
-    padding-left: $sm-space;
+    padding: $sm-space;
   }
 
   .link {
     color: $black;
     text-decoration: none;
+  }
+
+  .side-menu-container {
+    background-color: $grey;
+    width: $side-menu-container-width;
   }
 }
