--- a/frontend/src/usecases/app/_variables.scss
+++ b/frontend/src/usecases/app/_variables.scss
@@ -31,7 +31,7 @@ $icon-size: 28px;
 $map-height: 300px;
 $map-width: 800px;
 
-$side-menu-container-width: 360px;
+$side-menu-container-width: 330px;
 
 $status-box-height: 180px;
 $status-box-width: 190px;
