--- a/frontend/src/usecases/layouts/components/layout/Layout.scss
+++ b/frontend/src/usecases/layouts/components/layout/Layout.scss
@@ -2,7 +2,5 @@
 
 .Layout {
   display: flex;
-  margin-left: $sm-space;
-  margin-right: $sm-space;
   width: 100%;
 }
