--- a/frontend/src/usecases/layouts/components/row/Row.scss
+++ b/frontend/src/usecases/layouts/components/row/Row.scss
@@ -18,5 +18,4 @@
 .Row-right {
   align-items: center;
   justify-content: flex-end;
-  margin-right: $sm-space;
 }
